crates/biome_module_graph/tests/snapshots/test_infer_module_types_preserves_new_expression_generic_instances_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export class Box<T> {
	value: T;

	constructor(value: T) {
		this.value = value;
	}
}

export const explicit = new Box<string>("value");
export const explicitValue = explicit.value;

export const inferred = new Box(1);
export const inferredValue = inferred.value;
```

## Inferred types

```
Binding Box "Box" => class "Box" {
  extends: none
  implements: []
  type_args: [T]
}

Binding T "T" => T

Binding value "value" => instanceof T

Expression "this" => instanceof Box<T>

Expression "this.value = value" => unknown

Expression "value" => instanceof T

Binding explicit "explicit" => instanceof Box<string: value>

Expression "new Box<string>(\"value\")" => instanceof Box<string: value>

Expression "Box" => class "Box" {
  extends: none
  implements: []
  type_args: [T]
}

Expression "\"value\"" => string: value

Binding explicitValue "explicitValue" => string: value

Expression "explicit" => instanceof Box<string: value>

Expression "explicit.value" => string: value

Binding inferred "inferred" => instanceof Box<number: 1>

Expression "new Box(1)" => instanceof Box<number: 1>

Expression "Box" => class "Box" {
  extends: none
  implements: []
  type_args: [T]
}

Expression "1" => number: 1

Binding inferredValue "inferredValue" => number: 1

Expression "inferred" => instanceof Box<number: 1>

Expression "inferred.value" => number: 1
```
