crates/biome_module_graph/tests/snapshots/test_infer_module_types_resolves_generic_builtin_instances_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function readMap(value: Map<string, number>): Map<string, number> {
	return value;
}

export function readSet(value: Set<string>): Set<string> {
	return value;
}

export function readWeakMap(
	value: WeakMap<object, string>,
): WeakMap<object, string> {
	return value;
}
```

## Inferred types

```
Binding readMap "readMap" => sync Function "readMap" {
  accepts: {
    params: [
      required value: instanceof Map<string, number>
    ]
    type_args: []
  }
  returns: instanceof Map<string, number>
}

Binding value "value" => instanceof Map<string, number>

Expression "value" => instanceof Map<string, number>

Binding readSet "readSet" => sync Function "readSet" {
  accepts: {
    params: [
      required value: instanceof Set<string>
    ]
    type_args: []
  }
  returns: instanceof Set<string>
}

Binding value "value" => instanceof Set<string>

Expression "value" => instanceof Set<string>

Binding readWeakMap "readWeakMap" => sync Function "readWeakMap" {
  accepts: {
    params: [
      required value: instanceof WeakMap<object, string>
    ]
    type_args: []
  }
  returns: instanceof WeakMap<object, string>
}

Binding value "value" => instanceof WeakMap<object, string>

Expression "value" => instanceof WeakMap<object, string>
```
