crates/biome_module_graph/tests/snapshots/test_infer_module_types_resolves_namespace_reexport_members.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/barrel.ts`

## Source

```ts
export * as MyNs from "./source.ts";
```
# `/src/index.ts`

## Source

```ts
import { MyNs } from "./barrel.ts";

export { MyNs };
```

## Inferred types

```
Binding MyNs "MyNs" => namespace Identifier("/src/source.ts") [
  "alpha":
    sync Function "alpha" {
      accepts: {
        params: []
        type_args: []
      }
      returns: number
    }
]
```

# `/src/source.ts`

## Source

```ts
export function alpha(): number {
	return 1;
}
```

## Inferred types

```
Binding alpha "alpha" => sync Function "alpha" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}

Expression "1" => number: 1
```
